--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,8 +44,12 @@ jobs:
         run: pytest --maxfail=1 --disable-warnings -q
 
       # ---- Build Stage ----
+      - name: Install build tools
+        run: pip install --upgrade setuptools wheel
+
       - name: Build package
         run: python setup.py sdist bdist_wheel
+
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
